[gd_scene load_steps=4 format=3 uid="uid://bqjis4gwh32fn"]

[ext_resource type="Script" path="res://UI/Scripts/main_ui.gd" id="1_r4d4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l7ef"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.763809, 0.763809, 0.763808, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mb50j"]
bg_color = Color(0.827451, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0.764706, 0.764706, 0.764706, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="main_ui" type="CanvasLayer"]
script = ExtResource("1_r4d4i")

[node name="health_bar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 24.0
offset_right = 160.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6l7ef")
theme_override_styles/fill = SubResource("StyleBoxFlat_mb50j")
step = 1.0
value = 100.0
show_percentage = false

[node name="coin_tab" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 160.0
offset_bottom = 88.0
color = Color(0.60933, 0.60933, 0.60933, 1)
metadata/_edit_group_ = true

[node name="coin_label" type="Label" parent="coin_tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer_tab" type="ColorRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 88.0
grow_horizontal = 0
color = Color(0.60933, 0.60933, 0.60933, 1)
metadata/_edit_group_ = true

[node name="timer_label" type="Label" parent="timer_tab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "0:00"
horizontal_alignment = 1
vertical_alignment = 1
